--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="navbar-list-container">
                 <ul class="navbar-list">
                     <li class="navbar-list-item">
-                        <a href="" class="link-item">Início</a>
+                        <a href="IA.html" class="link-item">Início</a>
                     </li>
                     <li class="navbar-list-item">
-                        <a href="" class="link-item">I.A.</a>
+                        <a href="sobre-nos.html" class="link-item">I.A.</a>
                     </li>
                     <li class="navbar-list-item">
                         <a href="" class="link-item">Sobre nós</a>
