--- a/index.html
+++ b/index.html
@@ -10,22 +10,29 @@
     <header>
         <nav class="navbar">
             <div class="navbar-img-container">
-                <img src="assets/brain.png" alt="" class="navbar-img">
+                <img src="src/assets/brain.png" alt="Logo" class="navbar-img">
             </div>
             <div class="navbar-list-container">
                 <ul class="navbar-list">
                     <li class="navbar-list-item">
-                        <a href="IA.html" class="link-item">Início</a>
+                        <a href="index.html" class="link-item">Início</a>
                     </li>
                     <li class="navbar-list-item">
-                        <a href="sobre-nos.html" class="link-item">I.A.</a>
+                        <a href="src/pages/IA.html" class="link-item">I.A.</a>
                     </li>
                     <li class="navbar-list-item">
-                        <a href="" class="link-item">Sobre nós</a>
+                        <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
+    <main>
+        <div class="whatis-container">
+            <div class="whatis-title-container">
+                <h1 class="whatis-title">O que é a NeuralNexus?</h1>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
