--- a/index.html
+++ b/index.html
@@ -30,8 +30,19 @@
     <main>
         <div class="whatis-container">
             <div class="whatis-title-container">
-                <h1 class="whatis-title">O que é a NeuralNexus?</h1>
+                <h1 class="whatis-title">O que é a Inteligência Artificial?</h1>
             </div>
+        </div>
+        <div class="text-1-container">
+            <p class="text-1">A Inteligência Artificial (IA) é um campo que avança a passos largos, transformando a maneira como vivemos e trabalhamos.<br> Se você está curioso sobre essa tecnologia, prepare-se para uma jornada emocionante!</p>
+        </div>
+        <div class="img1-container">
+            <img src="src/assets/img1.png" alt="txt-img-1" class="img1">
+        </div>
+        <div class="list-ia-type-container">
+            <ul>
+                <li></li>
+            </ul>
         </div>
     </main>
 </body>
