--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="list-ia-type-container">
             <ul>
-                <li></li>
+                <li>O que é a "Inteligência artificial"</li> 
             </ul>
         </div>
     </main>
