--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <div class="navbar-img-container">
-                <img src="src/assets/brain.png" alt="Logo" class="navbar-img">
+                <img src="src/assets/output-onlinepngtools.png" alt="Logo" class="navbar-img">
             </div>
             <div class="navbar-list-container">
                 <ul class="navbar-list">
@@ -18,7 +18,7 @@
                         <a href="index.html" class="link-item">Início</a>
                     </li>
                     <li class="navbar-list-item">
-                        <a href="src/pages/IA.html" class="link-item">I.A.</a>
+                        <a href="src/pages/IA.html" class="link-item">I.As.</a>
                     </li>
                     <li class="navbar-list-item">
                         <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
@@ -40,10 +40,46 @@
             <img src="src/assets/img1.png" alt="txt-img-1" class="img1">
         </div>
         <div class="list-ia-type-container">
-            <ul>
-                <li></li>
-            </ul>
+                <p>Mas do que de fato se trata?</p><br>
+                <p>Inteligência Artificial (IA) é um ramo da ciência da computação que se concentra no desenvolvimento de sistemas e algoritmos capazes de realizar tarefas que normalmente exigem inteligência humana. Algumas das suas tarefas são:</p>
+            <div class="list-1">
+                <ul>
+                    <li>Aprendizado;</li>
+                    <li>Raciocínio;</li>
+                    <li>Resolução de problemas complexos;</li>
+                    <li>Pesquisa facilitada.</li><br>
+                </ul>
+            </div>
+            <p>Apesar da IA ter suas raízes na década de 1950 com a Máquina de Turing, seu progresso se intensificou nas últimas décadas, com progressos notáveis em hardware, software e métodos de aprendizado. Ademais, a quantidade de dados à disposição cresceu, tornando possível "ensinar" essas IAs de maneira mais eficaz. A Inteligência Artificial tem sido empregada em diversas situações, incluindo: assistentes virtuais, carros autônomos, análise de dados, medicina, finanças, entretenimento e muito mais, revolucionando a forma como vivemos e trabalhamos.</p>
         </div>
     </main>
+
+    <footer class="footer">
+        <div class="img-footer-container">
+            <a href="index.html">
+                <img src="src/assets/output-onlinepngtools.png" alt="logo" class="img-footer">
+            </a>
+        </div>
+        <div class="black-line-footer-container">
+            <hr class="black-line-footer">
+        </div>
+        <div class="footer-list-container">
+            <ul class="footer-list">
+                <li class="footer-list-item">
+                    <a href="index.html" rel="home" class="footer-list-link">Início</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="src/pages/sobre-nos.html" rel="next" class="footer-list-link">Sobre Nós</a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="src/pages/i" rel="next" class="footer-list-link">Inteligências artificiais</a>
+                </li>
+                
+            </ul>
+        </div>
+        <div class="p-footer-aboutus-container">
+            <p class="p-footer-aboutus"></p>
+        </div>
+    </footer>
 </body>
 </html>
