--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style-ia.css">
+    <title>NeuralNexus</title>
 </head>
 <body>
-    
-</body>
-</html>
+    <header>
+        <nav class="navbar">
+            <div class="navbar-img-container">
+                <img src="output-onlinepngtools.png" alt="Logo" class="navbar-img">
+            </div>
+            <div class="navbar-list-container">
+                <ul class="navbar-list">
+                    <li class="navbar-list-item">
+                        <a href="IA.html" class="link-item">Início</a>
+                    </li>
+                    <li class="navbar-list-item">
+                        <a href="src/pages/IA.html" class="link-item">I.As.</a>
+                    </li>
+                    <li class="navbar-list-item">
+                        <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
