--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-ia.css">
+    <link rel="stylesheet" href="../styles/style-ia.css">
     <title>NeuralNexus</title>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="navbar-img-container">
-                <img src="output-onlinepngtools.png" alt="Logo" class="navbar-img">
+                <img src="../assets/output-onlinepngtools.png" alt="Logo" class="navbar-img">
             </div>
             <div class="navbar-list-container">
                 <ul class="navbar-list">
