--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li>Pesquisa facilitada.</li><br>
                 </ul>
             </div>
-            <p>Apesar da IA ter suas raízes na década de 1950 com a Máquina de Turing, seu progresso se intensificou nas últimas décadas, com progressos notáveis em hardware, software e métodos de aprendizado. Ademais, a quantidade de dados à disposição cresceu, tornando possível "ensinar" essas IAs de maneira mais eficaz. A Inteligência Artificial tem sido empregada em diversas situações, incluindo: assistentes virtuais, carros autônomos, análise de dados, medicina, finanças, entretenimento e muito mais, revolucionando a forma como vivemos e trabalhamos.</p>
+            <p>Apesar da IA ter suas raízes na década de 1950 com a Máquina de Turing, seu progresso se intensificou nas últimas décadas, com progressos notáveis em hardware, software e métodos de aprendizado. Ademais, a quantidade de dados à disposição cresceu, tornando possível "ensinar" essas IAs de maneira mais eficaz. A Inteligência Artificial tem sido empregada em diversas situações, incluindo: assistentes virtuais, carros autônomos, análise de dados, medicina, finanças, entretenimento e muito mais, revolucionando a forma como vivemos e trabalhamos.</p><br>
         </div>
     </main>
 
