--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -28,3 +28,17 @@
         </nav>
     </header>
     <main>
+        <div class="sugestions-title-container">
+            <div class="sugestions-title">
+        <h1>Aqui estão algumas sugestões de I.As. para você usar no seu dia-a-dia</h1></div>
+        </div>
+        </div>
+        <table>
+            <tr>
+                <td><img src="/src/assets/otio.png" alt="ia-1" class="ia-1">
+                    <td> vai tomano escrevi do lado da foto
+            </tr>
+                    <div class="first-img-container">
+        </div>
+        </table>
+            
