--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -15,7 +15,7 @@
             <div class="navbar-list-container">
                 <ul class="navbar-list">
                     <li class="navbar-list-item">
-                        <a href="IA.html" class="link-item">Início</a>
+                        <a href="../../index.html" class="link-item">Início</a>
                     </li>
                     <li class="navbar-list-item">
                         <a href="src/pages/IA.html" class="link-item">I.As.</a>
@@ -33,12 +33,22 @@
         <h1>Aqui estão algumas sugestões de I.As. para você usar no seu dia-a-dia</h1></div>
         </div>
         </div>
-        <table>
-            <tr>
-                <td><img src="/src/assets/otio.png" alt="ia-1" class="ia-1">
-                    <td> vai tomano escrevi do lado da foto
-            </tr>
-                    <div class="first-img-container">
+        <div class="ia-1-container">
+            <img src="../assets/otio.png" alt="primeira-ia" class="img-ia-1">
+            <h3 class="texto-ia-1">• Essa I.A. te ajudará em pesquisas, te ajudando a coletar e organizar informações de PDFs e vídeos do Youtube.</h3>
         </div>
-        </table>
-            
+
+        <div class="ia-2-container">
+            <img src="../assets/taskade.png" alt="img-ia-2" class="img-ia-2">
+            <h3 class="texto-ia-2">• Combina gestão de tarefas com assistência de IA para automatizar agendamentos e organização de tarefas.</h3>
+        </div>
+
+        <div class="ia-3-container">
+            <img src="../assets/canva.png" alt="img-ia-3" class="img-ia-3">
+            <h3 class="texto-ia-3">• Oferece sugestões de design assistidas por IA e ajuda na criação de conteúdo visual para redes sociais, apresentações e mais.</h3>
+        </div>
+
+        <div class="ia-4-container">
+            <img src="../assets/duolingo.png" alt="img-ia-4" class="img-ia-4">
+            <h3 class="texto-ia-4">• Um aplicativo de aprendizado de idiomas que adapta as lições com base no progresso do usuário.</h3>
+        </div>
