--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
                     <a href="index.html" rel="home" class="footer-list-link">Início</a>
                 </li>
                 <li class="footer-list-item">
-                    <a href="src/pages/sobre-nos.html" rel="next" class="footer-list-link">Sobre Nós</a>
+                    <a href="src/pages/sobre-nos.html" rel="footer-aboutus" class="footer-list-link">Sobre Nós</a>
                 </li>
                 <li class="footer-list-item">
-                    <a href="src/pages/i" rel="next" class="footer-list-link">Inteligências artificiais</a>
+                    <a href="src/pages/IA.html" rel="next" class="footer-list-link">Inteligências artificiais</a>
                 </li>
-                
             </ul>
         </div>
         <div class="p-footer-aboutus-container">
