--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -52,3 +52,33 @@
             <img src="../assets/duolingo.png" alt="img-ia-4" class="img-ia-4">
             <h3 class="texto-ia-4">• Um aplicativo de aprendizado de idiomas que adapta as lições com base no progresso do usuário.</h3>
         </div>
+
+        <footer class="footer">
+            <div class="img-footer-container">
+                <a href="index.html">
+                    <img src="../assets/output-onlinepngtools.png" alt="logo" class="img-footer">
+                </a>
+            </div>
+            <div class="black-line-footer-container">
+                <hr class="black-line-footer">
+            </div>
+            <div class="footer-list-container">
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <a href="../../index.html" rel="home" class="footer-list-link">Início</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="../pages/sobre-nos.html" rel="footer-aboutus" class="footer-list-link">Sobre Nós</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a href="../pages/IA.html" rel="next" class="footer-list-link">Inteligências artificiais</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="p-footer-aboutus-container">
+                <p class="p-footer-aboutus"></p>
+            </div>
+        </footer>
+    </main>
+    </body>
+    </html>
