--- a/index.html
+++ b/index.html
@@ -46,11 +46,49 @@
                 <ul>
                     <li>Aprendizado;</li>
                     <li>Raciocínio;</li>
-                    <li>Resolução de problemas complexos;O que é a "Inteligência artificial"</li> 
+                    <li>Resolução de problemas complexos;</li> 
                     <li>Pesquisa facilitada.</li><br>
                 </ul>
             </div>
             <p>Apesar da IA ter suas raízes na década de 1950 com a Máquina de Turing, seu progresso se intensificou nas últimas décadas, com progressos notáveis em hardware, software e métodos de aprendizado. Ademais, a quantidade de dados à disposição cresceu, tornando possível "ensinar" essas IAs de maneira mais eficaz. A Inteligência Artificial tem sido empregada em diversas situações, incluindo: assistentes virtuais, carros autônomos, análise de dados, medicina, finanças, entretenimento e muito mais, revolucionando a forma como vivemos e trabalhamos.</p><br>
+        </div>
+
+        <div class="beneficios-title-container">
+            <h1 class="beneficios-title">Quais os benefícios?</h1>
+        </div>
+        <div class="beneficios-text">
+            <p>O desenvolvimento da Inteligência Artificial e o crescimento do seu uso trás consigo diversos benefícios, tanto no dia-a-dia quanto em algumas áreas do mercado de trabalho, que com sua melhora tem escolhido cada vez mais o uso da I.A.</p><br>
+            <h3 class="beneficios-text-2">Mas afinal, quais são esses benefícios?</h3><br>
+            <p>Alguns dos feedbacks após o início da utilização da I.A. são:</p>
+            <div class="beneficios-list">
+                <ul>
+                    <li><h4>Melhoria da eficiência e produtividade:</h4> A Inteligência Artificial tem a capacidade de automatizar tarefas rotineiras, possibilitando que os seres humanos se dediquem a tarefas mais complexas e inventivas. Ademais, ela tem a capacidade de examinar grandes quantidades de dados de forma ágil, detectando padrões e tendências que seriam complexos de identificar manualmente;</li><br>
+                    <li><h4>Avanços na área da saúde:</h4>A Inteligência Artificial está sendo empregada para criar novos tratamentos, identificar enfermidades com maior exatidão e customizar planos de tratamento para cada paciente;</li><br>
+                    <li><h4>Atendimento ao cliente:</h4>Chatbots e assistentes virtuais podem responder a perguntas de clientes de forma rápida e eficiente.</li>
+                </ul>
+            </div>
+                <p>Há diversos outros benefícios que vem com o uso da I.A. assim como há seus "desafios".</p><br>
+        </div>
+        <div class="challenge-title-container">
+            <h1 class="challenge-title">Quais os desafios?</h1>
+        </div>
+        <div class="challenge-text">
+            <p>Agora que já sabemos que há diversos avanços benéficos trazidos pelo uso da I.A. está na hora de conhecer seus problemas, os quais é muito importante se atentar antes de usar algum tipo de inteligência artificial.</p><br>
+            <h3>Quais são esses desafios e por que são um problema?</h3><br>
+            <p>Vem sido observado várias adversidades com o uso e crescimento da Inteligência Artificial, contendo alguns desafios e problemas mais graves.<br>Alguns deles são:</p><br>
+            <div class="challenge-list">
+                <ul>
+                    <li><h4>Privacidade:</h4>As I.As. dependem muito do uso e coleta de dados, o que tem deixado algumas pessoas preocupadas com o quão seguras estão suas informações;</li>
+                    <li><h4>Dependência:</h4>Muitas pessoas estão se tornando dependentes da I.A. para realizar suas tarefas, o que se torna bastante prejudicial ao aprendizado, capacidade criativa e na tomada de decisões;</li>
+                    <li><h4>Desemprego:</h4>Algumas empresas estão adotando o uso de I.As. em setores que exercem tarefas repetitivas e rotineiras por ser mais prático e eficiente, fazendo com que algumas pessoas percam seu lugar por não terem a habilidade necessária.</li>
+                </ul>
+            </div>
+        </div>
+        <h3 class="finalizacao-title">Agora que você entendeu o que são as I.As. e quais seus impactos, que tal algumas sugestões da nossa equipe?</h3>
+        <p class="finalizacao-text">Clique no botão abaixo para ser direcionado a nossa página de I.As. que podem te ajudar!</p>
+
+        <div class="next-page-button">
+            <a href="src/pages/IA.html"><img src="src/assets/next-page.png" alt="next-page-button" class="next-page"></a>
         </div>
     </main>
 
