--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -34,22 +34,23 @@
         </div>
         </div>
         <div class="ia-1-container">
-            <img src="../assets/otio.png" alt="primeira-ia" class="img-ia-1">
+            <a href="https://otio.ai"><img src="../assets/otio.png" alt="primeira-ia" class="img-ia-1"></a>
             <h3 class="texto-ia-1">• Essa I.A. te ajudará em pesquisas, te ajudando a coletar e organizar informações de PDFs e vídeos do Youtube.</h3>
         </div>
 
         <div class="ia-2-container">
-            <img src="../assets/taskade.png" alt="img-ia-2" class="img-ia-2">
+            <a href="https://www.taskade.com/?via=website&gad_source=1&gclid=Cj0KCQjwsJO4BhDoARIsADDv4vB8Oiz_wBBX9KiVh2wUHpAnkaobLg-cz5d2PkUmQTH4LZxLJ1Gde_8aAvRoEALw_wcB"><img src="../assets/taskade.png" alt="img-ia-2" class="img-ia-2"></a>
             <h3 class="texto-ia-2">• Combina gestão de tarefas com assistência de IA para automatizar agendamentos e organização de tarefas.</h3>
         </div>
 
         <div class="ia-3-container">
-            <img src="../assets/canva.png" alt="img-ia-3" class="img-ia-3">
+            <a href="https://www.canva.com"><img src="../assets/canva.png" alt="img-ia-3" class="img-ia-3"></a>
+            
             <h3 class="texto-ia-3">• Oferece sugestões de design assistidas por IA e ajuda na criação de conteúdo visual para redes sociais, apresentações e mais.</h3>
         </div>
 
         <div class="ia-4-container">
-            <img src="../assets/duolingo.png" alt="img-ia-4" class="img-ia-4">
+            <a href="https://pt.duolingo.com"><img src="../assets/duolingo.png" alt="img-ia-4" class="img-ia-4"></a>
             <h3 class="texto-ia-4">• Um aplicativo de aprendizado de idiomas que adapta as lições com base no progresso do usuário.</h3>
         </div>
 
