--- a/src/pages/IA.html
+++ b/src/pages/IA.html
@@ -21,7 +21,10 @@
                         <a href="src/pages/IA.html" class="link-item">I.As.</a>
                     </li>
                     <li class="navbar-list-item">
-                        <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
+                        <a href="../pages/videos.html" class="link-item">Vídeos</a>
+                    </li>
+                    <li class="navbar-list-item">
+                        <a href="../pages/sobre-nos.html" class="link-item">Sobre nós</a>
                     </li>
                 </ul>
             </div>
