--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <a href="src/pages/IA.html" class="link-item">I.As.</a>
                     </li>
                     <li class="navbar-list-item">
+                        <a href="src/pages/videos.html" class="link-item">Vídeos</a>
+                    </li>
+                    <li class="navbar-list-item">
                         <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
                     </li>
                 </ul>
