--- a/src/pages/sobre-nos.html
+++ b/src/pages/sobre-nos.html
@@ -21,6 +21,9 @@
                         <a href="../pages/IA.html" class="link-item">I.As.</a>
                     </li>
                     <li class="navbar-list-item">
+                      <a href="../pages/videos.html" class="link-item">Vídeos</a>
+                  </li>
+                    <li class="navbar-list-item">
                         <a href="../pages/sobre-nos.html" class="link-item">Sobre nós</a>
                     </li>
                 </ul>
