--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -42,6 +42,7 @@
                 <ul class="video-topic-1">
                     <li>
                         <h3>Com este vídeo você pode entender melhor sobre 'o que é' a Inteligência Artificial.</h3>
+                        <p class="channel-name">Canal: Minutos Psíquicos</p>
                     </li>
                 </ul>
 
@@ -51,6 +52,7 @@
                     <ul class="video-topic-1">
                         <li>
                             <h3>Com este vídeo você pode aprender formas práticas de utilizar a I.A. no seu dia a dia.</h3>
+                            <p class="channel-name">Canal: Manual do mundo</p>
                         </li>
                     </ul>
 
@@ -60,6 +62,7 @@
                         <ul class="video-topic-1">
                             <li>
                                 <h3>Este vídeo mostra o grande problema do desenvolvimento desses sistemas.</h3>
+                                <p class="channel-name">Canal: Ciência todo dia</p>
                             </li>
                         </ul>
 
