--- a/index.html
+++ b/index.html
@@ -4,82 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>NeuralNexus</title>
+    <title>Feliz Aniversário!</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="navbar-img-container">
-                <img src="src/assets/output-onlinepngtools.png" alt="Logo" class="navbar-img">
-            </div>
-            <div class="navbar-list-container">
-                <ul class="navbar-list">
-                    <li class="navbar-list-item">
-                        <a href="index.html" class="link-item">Início</a>
-                    </li>
-                    <li class="navbar-list-item">
-                        <a href="src/pages/IA.html" class="link-item">I.As.</a>
-                    </li>
-                    <li class="navbar-list-item">
-                        <a href="src/pages/sobre-nos.html" class="link-item">Sobre nós</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <div class="whatis-container">
-            <div class="whatis-title-container">
-                <h1 class="whatis-title">O que é a Inteligência Artificial?</h1>
-            </div>
+    <div class="secret-box-container">
+        <div class="button-secret-container">
+            <button class="button-secret" id="botao-secreto" onclick="ShowImages()">Papai...</button>
         </div>
-        <div class="text-1-container">
-            <p class="text-1">A Inteligência Artificial (IA) é um campo que avança a passos largos, transformando a maneira como vivemos e trabalhamos.<br> Se você está curioso sobre essa tecnologia, prepare-se para uma jornada emocionante!</p>
+        <div class="images-1-container" id="box-1">
+            <img src="src/assets/foto-1.png" alt="" class="images">
+            <img src="src/assets/foto-2.png" alt="" class="images">
+            <img src="src/assets/foto-3.png" alt="" class="images">
         </div>
-        <div class="img1-container">
-            <img src="src/assets/img1.png" alt="txt-img-1" class="img1">
+        <div class="subtitle-container" id="middle-subt">
+            <h5>Você aceita ser o padrinho da minha formatura?</h5>
         </div>
-        <div class="list-ia-type-container">
-                <p>Mas do que de fato se trata?</p><br>
-                <p>Inteligência Artificial (IA) é um ramo da ciência da computação que se concentra no desenvolvimento de sistemas e algoritmos capazes de realizar tarefas que normalmente exigem inteligência humana. Algumas das suas tarefas são:</p>
-            <div class="list-1">
-                <ul>
-                    <li>Aprendizado;</li>
-                    <li>Raciocínio;</li>
-                    <li>Resolução de problemas complexos;O que é a "Inteligência artificial"</li> 
-                    <li>Pesquisa facilitada.</li><br>
-                </ul>
-            </div>
-            <p>Apesar da IA ter suas raízes na década de 1950 com a Máquina de Turing, seu progresso se intensificou nas últimas décadas, com progressos notáveis em hardware, software e métodos de aprendizado. Ademais, a quantidade de dados à disposição cresceu, tornando possível "ensinar" essas IAs de maneira mais eficaz. A Inteligência Artificial tem sido empregada em diversas situações, incluindo: assistentes virtuais, carros autônomos, análise de dados, medicina, finanças, entretenimento e muito mais, revolucionando a forma como vivemos e trabalhamos.</p>
+        <div class="images-2-container" id="box-2">
+            <img src="src/assets/foto-4.png" alt="" class="images">
+            <img src="src/assets/foto-5.png" alt="" class="images">
+            <img src="src/assets/foto-6.png" alt="" class="images">
         </div>
-    </main>
-
-    <footer class="footer">
-        <div class="img-footer-container">
-            <a href="index.html">
-                <img src="src/assets/output-onlinepngtools.png" alt="logo" class="img-footer">
-            </a>
-        </div>
-        <div class="black-line-footer-container">
-            <hr class="black-line-footer">
-        </div>
-        <div class="footer-list-container">
-            <ul class="footer-list">
-                <li class="footer-list-item">
-                    <a href="index.html" rel="home" class="footer-list-link">Início</a>
-                </li>
-                <li class="footer-list-item">
-                    <a href="src/pages/sobre-nos.html" rel="next" class="footer-list-link">Sobre Nós</a>
-                </li>
-                <li class="footer-list-item">
-                    <a href="src/pages/i" rel="next" class="footer-list-link">Inteligências artificiais</a>
-                </li>
-                
-            </ul>
-        </div>
-        <div class="p-footer-aboutus-container">
-            <p class="p-footer-aboutus"></p>
-        </div>
-    </footer>
+    </div>
+    <div class="secret-audio-container">
+    </div>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
